--- a/decks/manifest.json
+++ b/decks/manifest.json
@@ -82,17 +82,36 @@
     ]
   },
   {
-    "nom": "📐 Mathématiques - Cycle 3 (CM1, CM2, 6e)",
+    "nom": "📐 Mathématiques - Cycle 3 (CM1, CM2, 6ème)",
     "type": "dossier",
     "contenu": [
-      {
-        "nom": "🔢 Nombres et calculs",
-        "type": "dossier",
-        "contenu": [
-          { "nom": "Fractions & Décimaux", "type": "fichier", "path": "cycle3/nombres/fractions_decimaux.md" },
-          { "nom": "Proportionnalité", "type": "fichier", "path": "cycle3/nombres/proportionnalite.md" }
-        ]
-      }
-    ]
+       {
+          "nom": "🔢 Nombres et calculs",
+          "type": "dossier",
+          "contenu": [
+                {
+                  "nom": "1.1.Représenter les nombres entiers",
+                  "type": "fichier",
+                  "path": "cycle3/nombres/1.1.representation_entiers.md"
+                },
+                {
+                  "nom": "1.2.Décomposer les nombres entiers",
+                  "type": "fichier",
+                  "path": "cycle3/nombres/1.2.decomposition_entiers.md"
+                },
+                {
+                  "nom": "1.3.Chiffre de, nombre de",
+                  "type": "fichier",
+                  "path": "cycle3/nombres/1.3.chiffre_nombre_de.md"
+                },
+                {
+                  "nom": "1.6.Comparer des entiers",
+                  "type": "fichier",
+                  "path": "cycle3/nombres/1.6.comparaison_entiers.md"
+                }  
+            ]
+          }
+      ]
   }
+
 ]
